Fix vercel.json configuration for correct build source and routing

--- a/ vercel.json
+++ b/ vercel.json
@@ -2,14 +2,19 @@
   "version": 2,
   "builds": [
     {
-      "src": "./build/index.html",
-      "use": "@vercel/static"
+      "src": "./dist/index.html",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/build/index.html"
+      "dest": "/index.html"
     }
-  ]
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
