Fix vercel.json configuration by adding missing config object and correcting routes to rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,18 @@
   "builds": [
     {
       "src": "./dist/index.html",
-      "use": "@vercel/static-build"
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
-  ]
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
